tests/snapshots/snapshot__type_errors@types_with_the_same_name.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/types_with_the_same_name.roto
---
Error: Type error: type `Foo` is declared multiple times
   ╭─[ tests/scripts/type_errors/types_with_the_same_name.roto:2:6 ]
   │
 1 │ type Foo { a: u32 }
   │      ─┬─  
   │       ╰─── previously declared here
 2 │ type Foo { b: u32 }
   │      ─┬─  
   │       ╰─── cannot overwrite type
───╯
